<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintGuide_percent="0.33"
    tools:context=".MeterWizard.MeterWizardMagnet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linlay_findRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/round_rect_bkgrd"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/text_speed_wizard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_drive_wizard_magnet"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/text_speed_q"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_speed_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_speed_magnet_q"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/img_meter"
                app:layout_constraintTop_toBottomOf="@+id/text_speed_wizard"/>

            <ImageView
                android:id="@+id/img_meter"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/str_meter_img"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image2vector"
                app:layout_constraintTop_toBottomOf="@+id/text_speed_q"/>

            <LinearLayout
                android:id="@+id/linlay_adjButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_one"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/str_one"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/radio_two"/>

                <RadioButton
                    android:id="@+id/radio_two"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/str_two"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/radio_one"
                    app:layout_constraintBottom_toTopOf="@+id/radio_four"/>

                <RadioButton
                    android:id="@+id/radio_four"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/str_four"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/radio_two"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
            android:id="@+id/but_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_cancel"/>


            <Button
                android:id="@+id/but_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_next"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
<!--</RelativeLayout>-->