<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintGuide_percent="0.33"
    tools:context=".MeterWizard.MeterWizardRPM">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linlay_findRatio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:background="@drawable/round_rect_bkgrd"
            android:orientation="vertical"
            android:layout_weight="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/text_speed_wizard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_speed_wizard_rpm"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/text_speed_q"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_rpm_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/img_meter"
                app:layout_constraintTop_toBottomOf="@+id/text_speed_wizard"/>

            <ImageView
                android:id="@+id/img_meter"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/str_meter_img"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image2vector"
                app:layout_constraintTop_toBottomOf="@+id/text_speed_q"/>

            <TextView
                android:id="@+id/text_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:text="@string/str_speed_ratio"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linlay_adjButtons"
                app:layout_constraintTop_toBottomOf="@+id/img_meter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/str_speed_rpm_input"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linlay_adjButtons"
                app:layout_constraintTop_toBottomOf="@+id/img_meter"/>

            <LinearLayout
                android:id="@+id/linlay_adjButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linlay_adjButtons">

                <Button
                    android:id="@+id/but_decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/str_speed_minus"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/text_rpm"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="numberDecimal"
                    android:autofillHints="@string/str_zero"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/colorWhite"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/but_increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/str_speed_plus"
                    android:textSize="20sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/but_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_cancel"/>


            <Button
                android:id="@+id/but_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_finish"
                app:layout_constraintBottom_toBottomOf="@+id/but_cancel"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>