<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintGuide_percent="0.33"
    tools:context=".MeterWizard.MeterWizardCalibrate">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linlay_findRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/round_rect_bkgrd"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/text_speed_wizard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/str_drive_wizard_calibrate"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/text_speed_q"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_speed_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_calibate"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linlay_adjButtons"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_cali_statement_1"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/linlay_adjButtons"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_target_speed"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/text_target_speed"/>

            <LinearLayout
                android:id="@+id/linlay_target_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linlay_target_speed">

                <TextView
                    android:id="@+id/text_target_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="80sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:text="MPH"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="25sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_cali_statement_2"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/text_target_speed"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/str_current_speed"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/linlay_curr_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linlay_target_speed">

                <TextView
                    android:id="@+id/text_curr_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="80sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:text="MPH"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="25sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
            android:id="@+id/but_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_cancel"/>

            <Button
                android:id="@+id/but_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_finish"
                app:layout_constraintBottom_toBottomOf="@+id/but_cancel"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
<!--</RelativeLayout>-->